# TalosCV

./: CONFIG.md  DOC.md  MANUAL.md  README.md  ROS.gitignore  line_ip.txt  tracking_cam_wservo.py
ROS/catkin_ws/: .gitignore  eth_config.sh  launch.sh  log_depth.txt  ros.md
ROS/catkin_ws/.catkin_tools/profiles/default/: devel_collisions.txt
ROS/catkin_ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
ROS/catkin_ws/devel/.private/catkin_tools_prebuild/: .catkin  _setup_util.py  setup.sh
ROS/catkin_ws/devel/.private/rbx1/: .catkin
ROS/catkin_ws/devel/.private/rbx1_apps/: .catkin  _setup_util.py  local_setup.sh  setup.sh
ROS/catkin_ws/logs/tiago_controller/: build.check.003.log.stderr  build.cmake.000.log.stderr  build.cmake.001.log.stderr  build.cmake.005.log.stderr
ROS/catkin_ws/logs/tracker_cam/: build.check.000.log.stderr  build.check.001.log.stderr  build.check.020.log.stderr  build.check.025.log.stderr  build.check.026.log.stderr  build.check.133.log.stderr  build.check.134.log.stderr  build.check.135.log.stderr  build.check.177.log.stderr  build.make.168.log.stderr  build.make.169.log.stderr
ROS/catkin_ws/src/tiago_controller/: CMakeLists.txt  README.md  controller_plugins.xml
ROS/catkin_ws/src/tiago_controller/config/: tiago_control.yaml  tiago_iwbc.yaml
ROS/catkin_ws/src/tiago_controller/deployment/: deploy.py  deploy.sh  notes.md
ROS/catkin_ws/src/tiago_controller/etc/: cartesian_line.yaml  configurations.srdf  move.yaml  pos_tracker.yaml  tasks.yaml  tiago_steel.urdf
ROS/catkin_ws/src/tiago_controller/include/tiago_controller/: behavior_move.hpp  joint_controller.hpp  tts_client.hpp
ROS/catkin_ws/src/tiago_controller/launch/: tiago_controller.launch
ROS/catkin_ws/src/tiago_controller/src/: behavior_move.cpp  joint_controller.cpp
ROS/catkin_ws/src/tiago_controller/srv/: move.srv
ROS/catkin_ws/src/tracker_cam/: CMakeLists.txt  package.xml  setup.py
ROSconfig/: config.sh
script/: test.sh  track.sh  win.sh
src/: tracking.py
talos_image/: DockerFile  Dockerfile
talos_image/docker_launch/: docker-tcv.sh  docker.sh  package-lock.json  package.json  parse.mjs
yaml/: configurations-elbow-side.srdf  frames.yml  gen.sh  gen_con.py  tasks.yaml
(+191 files in other folders)
